--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-node_modules/
-# Ignores all files starting with the letter z.
-z*
-# Ignores a file called .env.
-.env
-# Ignores a top-level directory named artifacts.
+
+z*,
+
+.env,
+
 /artifacts/
