--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-
-z*,
-
-.env,
-
+/node_modules
+# Ignores all files starting with the letter z.
+z*
+# Ignores a file called .env.
+.env
+# Ignores a top-level directory named artifacts.
 /artifacts/
